--- a/Project/Client/Views/User/Cart.cshtml
+++ b/Project/Client/Views/User/Cart.cshtml
@@ -100,7 +100,8 @@
             <div class="custom-bg-light p-3 shadow-sm border">
                 <!-- MoMo Payment Method -->
                 <div class="form-check text-secondary d-flex align-items-center">
-                    <input asp-for="PaymentMethod" value="Wallet" type="radio" id="momo" class="form-check-input" checked />                    <label for="momo" class="form-check-label d-flex align-items-center">
+                    <input asp-for="PaymentMethod" value="Wallet" type="radio" id="momo" class="form-check-input" checked />
+                    <label for="momo" class="form-check-label d-flex align-items-center">
                         <img src="~/image/Logo-MoMo-Square.webp" alt="MoMo Logo" class="mx-3 payment-icon me-2 p" />
                         MOMO
                     </label>
